tests/snapshots/run_wpt_conformance__litert_slicing_float32_0D_constant_tensor_with_empty_starts_and_sizes_should_be_a_no-op.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
slice.https.any.js slicing float32 0D constant tensor with empty starts and sizes should be a no-op, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([31, 197, 230, 65]);
  }

  nodes {
    [sliceOutput] = slice(operand_0, label="", strides=[]);
  }

  outputs { sliceOutput; }
}
