tests/snapshots/run_wpt_conformance__litert_softmax_float16_2D_tensor_all_negative.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softmax.https.any.js softmax float16 2D tensor all negative, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    softmaxInput: f16[4, 6];
  }

  nodes {
    [softmaxOutput] = softmax(softmaxInput, label="");
  }

  outputs { softmaxOutput; }
}
